--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,8 @@
 # Binaries for programs and plugins
-*.exe
-*.exe~
-*.dll
-*.so
-*.dylib
-
-# Test binary, build with `go test -c`
-*.test
+bin/
 
 # Output of the go coverage tool, specifically when used with LiteIDE
-*.out
+output/
+
+# target docker image path
+target/
